# smath

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml  format.yml
cmake/: smath.pc.in  smathConfig.cmake.in  smath_legacy_header.hpp.in
docs/: Doxyfile  DoxygenLayout.xml  build_docs.sh  custom.css  postprocess-doxygen.sh
examples/: projection.cpp  random_steps.cpp  tour.cpp
include/: smath.hpp
include/smath/: smath.hpp
include/smath/interop/: eigen.hpp  glm.hpp  hmm.hpp  raylib.hpp  sfml.hpp
src/modules/: CMakeLists.txt  smath.cppm
tests/: angles.cpp  interop.cpp  vec.cpp
